Extract example generation into own module